# SICK-PointCloud

./: CMakeLists.txt  CMakeSettings.json  Configuration  app.py  camera_test.py  main.py
3pp/spng_miniz/: CMakeLists.txt
Application/base/: CMakeLists.txt
Application/base/include/application_base_modules/: Camera.h  PLCData.h  Visualizer.h  features.h
Application/base/src/: Camera.cpp  PLCData.cpp  Visualizer.cpp  features.cpp
Application/main_application/: CMakeLists.txt  OPCTest.cpp  ObjectProcessor.cpp  app.cpp
Layers/: Circles.py  helper.py  logger.py
Layers/Camera/: Camera.py  CustomPointCloud.py  Visuals.py  features.py
Layers/Camera/Backup/: Visuals.py  features.py
Layers/OPC/: PLCData.py
Layers/OPC/Backup/: opcCoord.py
Layers/UI/: MyUi.py
VisionaryImages/: 1640.ini  1641.ini  755.ini  756.ini
base/cpp/src/: VisionaryData.cpp
image_frontend_configuration/python/: visionary_s_frontend_config.py
image_streaming_and_storing/cpp/: snapshots.cpp
shared/cpp/: CMakeLists.txt
visionary_welcome/cpp/: CMakeLists.txt  welcome.cpp  welcome_original.cpp
visionary_welcome/python/: custom.py  welcome.py
